--- a/package.json
+++ b/package.json
@@ -15,8 +15,11 @@
   },
   "scripts": {
     "editorconfig": "editorconfig-cli",
-    "stylelint": "stylelint .",
-    "test": "npm run editorconfig"
+    "stylelint": "stylelint \"source/sass/**/*.scss\" --syntax scss",
+    "test": "npm run editorconfig && npm run stylelint",
+    "build": "gulp style",
+    "start": "gulp serve",
+    "preinstall": "npx npm-force-resolutions"
   },
   "browserslist": [
     "last 2 versions",
